# llm_loan_adjudicator

./: .gitignore  README.md  pyproject.toml
data/: fine_tune_llm_credit_rules.json  loan_instruction_data.json  loan_instruction_data_balanced.json  loan_instruction_data_inference_outputs.json
src/config/: config.py
src/main/: data_generation.py  data_utils.py  main.py  model_utils.py  models.py  pretrained_gpt_utils.py
tools/: run_synthetic_data_generation.sh  run_train_routine.sh
