[project]
name = "llm-loan-adjudicator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "tensorflow>=2.18.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]
